@@ -76,6 +76,7 @@ Release 0.19.0 - Unreleased
                TRUNK/0.19.0.
    HBASE-1003  If cell exceeds TTL but not VERSIONs, will not be removed during
                major compaction
+   HBASE-1005  Regex and string comparison operators for ColumnValueFilter
       
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
